<resources>
    <string name="app_name">Fishing Notes</string>
    <string name="groups">Groups</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Your data will be saved. Are you sure to logout?</string>
    <string name="ok_button">OK</string>
    <string name="logout_dialog_cancel">Close</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="kind_of_fish">Kind of fish</string>
    <string name="bait">Bait</string>
    <string name="required">*Required</string>
    <string name="fish_catch">Catch</string>
    <string name="pc">PC.</string>
    <string name="amount">Amount</string>
    <string name="sample_amount" translatable="false">1</string>
    <string name="weight">Weight</string>
    <string name="sample_weight" translatable="false">0.1</string>
    <string name="kg">kg</string>
    <string name="fishing_method">Fishing method</string>
    <string name="fish_rod">Fish rod</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="place_title">Place title</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="options">Options</string>
    <string name="include_weather">Include weather</string>
    <string name="publish_catch">Publish catch</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="lure">Lure</string>
    <string name="pictures">Pictures</string>
    <string name="current">Current</string>
    <string name="on_map">On map</string>
    <string name="markers_list">Markers list</string>
    <string name="add">Add</string>
    <string name="coordinates">Coordinates</string>
    <string name="photos">Photos</string>
    <string name="new_catch">New catch</string>
    <string name="share">Share</string>
    <string name="route">Route</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_photo">Add photo</string>
    <string name="no_description">No description</string>
    <string name="navigate">Navigate</string>
    <string name="back">Back</string>
    <string name="user_photo">User photo</string>
    <string name="user">User</string>
    <string name="friends">Friends</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="weather">Weather</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="anonymous">Anonymous</string>
    <string name="fisher">Fisher</string>
    <string name="places">Places</string>
    <string name="catches">Catches</string>
    <string name="add_new_place">add new place</string>
    <string name="save">Save</string>
    <string name="permissions_required">Permissions required</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete_photo">Delete photo</string>
    <string name="add_photo_permission">Для загрузки фотографий приложению необходим доступ к памяти телефона</string>
    <string name="deny">Deny</string>
    <string name="provide">Provide</string>
    <string name="click_on_icon_to_change">Click on the icon to change!</string>
    <string name="no_photo_selected">No photo selected</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_message">Permission is denied, Please allow permissions from App Settings.</string>
    <string name="goto_app_settings">App Settings</string>
    <string name="not_all_fields_are_filled">Not all fields are filled in. Please, double check</string>
    <string name="marker_icon">Marker icon</string>
    <string name="catch_photo">Photo of the catch</string>
    <string name="test_description">"Walleye fishing, as well as, by the way, catching any fish, is a very interesting and exciting activity. Get a good and successful catch."</string>
    <string name="location">Location</string>
    <string name="calculating">Calculating…</string>
    <string name="new_place">New place</string>
    <string name="details">Details</string>
    <string name="add_new_catch">Add new catch</string>
    <string name="Choose_a_place">Choose a place</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="another_place_in_new_catch">Start adding a catch from the notes screen to choose another location!</string>
    <string name="locked">Locked</string>
    <string name="failed_to_determine">Failed to determine</string>
    <string name="fish_species">Fish species</string>
    <string name="apply">Apply</string>
    <string name="saving">Saving</string>
    <string name="Cancel">Cancel</string>
    <string name="Try_again">Try again</string>
    <string name="map_deletion">Place deletion</string>
    <string name="map_delete_confirmation">Are you sure you want to delete this point?</string>
    <string name="catch_deletion">Catch deletion</string>
    <string name="catch_delete_confirmantion">Are you sure you want to delete this catch?</string>
    <string name="enter_title">Pick some name for the place</string>
    <string name="map_types">Map types</string>
    <string name="not_specified">Not specified</string>
    <string name="catch_description">Catch description</string>
    <string name="note">Note</string>
    <string name="user_catch">Catch</string>
    <string name="cant_get_current_location">Can\'t get current location</string>
    <string name="my_location">My location</string>
    <string name="layers">Layers</string>
    <string name="terrain">Relief</string>
    <string name="satellite">Satellite</string>
    <string name="roadmap">By default</string>
    <string name="close">Close</string>
    <string name="map_type">Map type</string>
    <string name="way_of_fishing">Way of fishing</string>
    <string name="no_rod">No rod</string>
    <string name="no_bait">No bait</string>
    <string name="no_lure">No lure</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="pressure_units">mmHg</string>
    <string name="wind_speed_units">m/s</string>
    <string name="percent" translatable="false">%</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="moon_phase">Moon phase</string>
    <string name="saving_new_catch">Saving new catch</string>
    <string name="no_added_photos">No added photos</string>
    <string name="main">Main</string>
    <string name="icon">Icon</string>
    <string name="no_cathces_added">No catches added</string>
    <string name="add_catch_text">New catch</string>
    <string name="no_places_added">No places added</string>
    <string name="new_place_text">+ Add new place</string>
    <string name="mode_place_selecting">You are in place selecting mode!</string>
    <string name="mode_place_selecting_off">Location selection mode is off!</string>
    <string name="mode_place_info">You are in the mode of viewing information about the place!</string>
    <string name="login_title">Let\'s get it started!</string>
    <string name="google_login">Sign with google</string>
    <string name="start_screen_title">Start Screen</string>
    <string name="signin_error">An error occurred while logging in, try again!</string>
    <string name="google_login_failed">An error occurred while Google Sign In. Try again!</string>
    <string name="add_place_success">Place added successfully</string>
    <string name="for_today">Today</string>
    <string name="for_a_week">For a week</string>
    <string name="signing_in">Signing In</string>
    <string name="sign_with_google">Continue with Google</string>
    <string name="back_clicked">Do it again to close the app</string>
    <string name="searching">Searching…</string>
    <string name="unnamed_place">Unnamed place</string>
    <string name="cant_recognize_place">Couldn\'t determine location</string>
    <string name="current_location">Current location</string>
    <string name="install_maps_app">Please install a maps application</string>
    <string name="choose_place_first">Choose a place first!</string>
    <string name="transparent">Transparent</string>
    <string name="dont_ask_again">Don\'t ask</string>
    <string name="location_dont_ask">The request will no longer be displayed. To give the necessary permissions, go to your device settings</string>
    <string name="location_permission_denied">You have denied access to your location. Grant permissions in your device settings.</string>
    <string name="location_permission_dialog">Allow app to determine your location?</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise_sunset">Sunrise/Sunset</string>
    <string name="hourly">Hourly</string>
    <string name="location_permission">Location permission</string>
    <string name="provide_location_permission">Provide location permission to the app</string>
    <string name="time_format">Time format</string>
    <string name="use_12h">Use 12 hours time format</string>
    <string name="pressure_mm">mmHg</string>
    <string name="pressure_pa">Pa</string>
    <string name="pressure_bar">Bar</string>
    <string name="pressure_psi" translatable="false">Psi</string>
    <string name="choose_pressure_unit">Choose pressure unit</string>
    <string name="pressure_unit">Pressure unit</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="fahrenheit" translatable="false">°F</string>
    <string name="kelvin" translatable="false">K</string>
    <string name="now">Now</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="Evening">Evening</string>
    <string name="night">Night</string>
    <string name="daylight_hours">Daylight hours</string>
    <string name="hours">\h\</string>
    <string name="minutes">\m\</string>
    <string name="choose_temperature_unit">Choose temperature unit</string>
    <string name="temp">Temp.</string>
    <string name="in_8h">8h</string>
    <string name="in_16h">16h</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="app_theme">App theme</string>
    <string name="choose_app_theme">"Choose app theme "</string>
    <string name="no_name_place">No name place</string>
    <string name="select_place_for_weather">Select a place to load weather!</string>
    <string name="no_internet">No internet connection</string>
    <string name="reset">Discard</string>
    <string name="catch_added_successfully">Your catch has been successfully added!</string>
    <string name="error_occured">An error has occurred!</string>
    <string name="new_catch_error_description">Failed to add a new catch. Check your internet connection and try again.</string>
    <string name="choose_weather_icon">Choose weather icon:</string>
    <string name="adding_place_on_current_location">Adding place on your location</string>
    <string name="location_permissions_required">Location permissions required</string>
    <string name="marker_visibility_change_error">Couldn\'t change the visibility of the place!</string>
    <string name="marker_visibility_change_success">The visibility of the place has been successfully saved</string>
    <string name="settings_main">Main settings</string>
    <string name="fab_fast_add">Quickly add a point to the map</string>
    <string name="fast_fab_description">Hold down the add location button on the map to quickly save your current location</string>
    <string name="settings_weather">Weather settings</string>
</resources>