<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetPlace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="8dp"
    android:padding="8dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_description">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_add_new_catch"
                style="@style/OutlineChip"
                android:text="@string/new_catch"
                app:chipIcon="@drawable/ic_add_catch" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_route"
                style="@style/OutlineChip"
                android:text="@string/route"
                app:chipIcon="@drawable/ic_baseline_navigation_24" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_details"
                style="@style/OutlineChip"
                android:text="@string/details"
                app:chipIcon="@drawable/ic_baseline_shortcut_24" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_place_title"
        style="@style/TextAppearance.AppCompat.MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/iv_marker_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_place_description"
        style="@style/TextAppearance.AppCompat.SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_description"
        app:layout_constraintStart_toStartOf="@+id/tv_place_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_title" />

    <ImageView
        android:id="@+id/iv_marker_icon"
        style="@style/SimpleIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_place_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_place_title"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        app:tint="@color/secondaryFigmaColor" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fish"
        app:tint="@color/secondaryFigmaTextColor" />

    <TextView
        android:id="@+id/tv_num_of_catches"
        style="@style/TextAppearance.AppCompat.SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />
</androidx.constraintlayout.widget.ConstraintLayout>